fix: fix overflow on dashboard lists with scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,26 @@
   font-family: "Google Sans", sans-serif;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
